# cpptoolbox

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: config.h.in
cmake/libs/fmt/: CMakeLists.txt
doc/toolbox/argv/: argv.md  make_parser.md  options.md  parser.md
doc/toolbox/cpp/: cpp.md
examples/: CMakeLists.txt
examples/batch/: CMakeLists.txt  main.cxx
examples/cat/: CMakeLists.txt  main.cxx
examples/curlget/: CMakeLists.txt  main.cxx
include/cpp/: call_seq.hpp  tuple_at.hpp  tuple_for_each.hpp
include/meta/: meta.hpp  meta_fwd.hpp
include/toolbox/: argv.hpp  config.h  cpp.hpp  getline.hpp  span.hpp  testing.hpp  text_file.hpp
include/toolbox/alloc/: bitmap_allocator.hpp  stack_allocator.hpp
include/toolbox/argv/: exceptions.hpp  options.hpp  parser.hpp
include/toolbox/container/: array.h  array.hpp  queue.h  queue.hpp  stack.h  stack.hpp  tuple.h  tuple.hpp  uninitialized_array.hpp
include/toolbox/cpp/: bitview.hpp  call_seq.hpp  cstring_ref.hpp  filesystem.hpp  for_each_param.hpp  format.hpp  int_type.hpp  make_ref_tuple.hpp  named_type.hpp  sizeof_tuple.hpp  span.hpp  static_config.hpp  string.hpp  tuple_at.hpp  tuple_for_each.hpp  uninitialized_array.h
include/toolbox/curl/: curl_error.hpp  easy.hpp  global.hpp
include/toolbox/gcc/: type_to_string.hpp
include/toolbox/marshall/: json.hpp  marshall.hpp  record.hpp
include/toolbox/std/: cstddef.h  new.h  type_traits.h  type_traits.hpp  utility.h
include/toolbox/string/: cat.hpp  line_iterator.hpp  split.hpp  trim.hpp
include/toolbox/system/: input_file_stream.hpp  popen.hpp
include/toolbox/testing/: test.h  test.hpp
src/: dummy.cxx
src/argv/: parser.cxx
src/cpp/: string.cxx
src/system/: input_file_stream.cxx  popen.cxx
tests/: CMakeLists.txt  argv.cxx  array.cxx  bitmap_allocator.cxx  bitview.cxx  call_seq.cxx  common_headers_compilation.cxx  cstring_ref.cxx  curl.cxx  for_each_param.cxx  format.cxx  getline_tests.cxx  int_type.cxx  main.cxx  make_ref_tuple.cxx  marshall.cxx  meta_compile_without_stdcpp.cxx  named_type.cxx  queue.cxx  sizeof_tuple.cxx  stack.cxx  stack_allocator.cxx  static_config.cxx  string_split_tests.cxx  string_tests.cxx  tuple.cxx  tuple_at.cxx  tuple_for_each.cxx  uninitialized_array.cxx
